test/error/uninitialized_variable.imp
# Simple uninitialized variable error test
PROGRAM IS
    a, b, sum
IN
    READ a;
    sum := a + b;
    WRITE sum;
END
